@@ -5,7 +5,7 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
@@ -14,12 +14,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-__version__ = "$Revision: 128 $"
-__author__  = "$Author: holtwick $"
-__date__    = "$Date: 2008-01-10 21:26:42 +0100 (Do, 10 Jan 2008) $"
-__svnid__   = "$Id: __init__.py 128 2008-01-10 20:26:42Z holtwick $"
+
+__version__ = "$Revision: 222 $"
+__author__ = "$Author: holtwick and noelle.anthony $"
+__date__ = "$Date: 2022-06-24 21:38:00 -0500 (Fr, 24 June 2022) $"
 
 # Also look in other packages with the same name
 
 from pkgutil import extend_path
+
 __path__ = extend_path(__path__, __name__)
