@@ -1,175 +1,0 @@
-CHANGELOG.txt
-LICENSE.txt
-PKG-INFO
-VERSION.txt
-ez_setup.py
-pisa.py
-setup.cfg
-setup.py
-demo/cherrypy/demo-cherrypy.conf
-demo/cherrypy/demo-cherrypy.html
-demo/cherrypy/demo-cherrypy.py
-demo/djangoproject/__init__.py
-demo/djangoproject/django-admin.py
-demo/djangoproject/ezpdf.py
-demo/djangoproject/manage.py
-demo/djangoproject/settings.py
-demo/djangoproject/urls.py
-demo/djangoproject/views.py
-demo/djangoproject/templates/base.html
-demo/djangoproject/templates/entries.html
-demo/tgpisa/dev.cfg
-demo/tgpisa/sample-prod.cfg
-demo/tgpisa/setup.py
-demo/tgpisa/start-tgpisa.py
-demo/tgpisa/test.cfg
-demo/tgpisa/tgpisa/__init__.py
-demo/tgpisa/tgpisa/commands.py
-demo/tgpisa/tgpisa/controllers.py
-demo/tgpisa/tgpisa/json.py
-demo/tgpisa/tgpisa/model.py
-demo/tgpisa/tgpisa/release.py
-demo/tgpisa/tgpisa/config/__init__.py
-demo/tgpisa/tgpisa/config/app.cfg
-demo/tgpisa/tgpisa/config/log.cfg
-demo/tgpisa/tgpisa/static/css/style.css
-demo/tgpisa/tgpisa/static/images/favicon.ico
-demo/tgpisa/tgpisa/static/images/header_inner.png
-demo/tgpisa/tgpisa/static/images/info.png
-demo/tgpisa/tgpisa/static/images/ok.png
-demo/tgpisa/tgpisa/static/images/tg_under_the_hood.png
-demo/tgpisa/tgpisa/static/images/under_the_hood_blue.png
-demo/tgpisa/tgpisa/templates/__init__.py
-demo/tgpisa/tgpisa/templates/login.kid
-demo/tgpisa/tgpisa/templates/master.kid
-demo/tgpisa/tgpisa/templates/welcome.kid
-demo/wsgi/pisawsgidemo.py
-doc/pisa-en.html
-doc/pisa-en.pdf
-doc/pisa.css
-doc/screen.css
-ho/__init__.py
-ho/pisa/__init__.py
-pisa.egg-info/PKG-INFO
-pisa.egg-info/SOURCES.txt
-pisa.egg-info/dependency_links.txt
-pisa.egg-info/entry_points.txt
-pisa.egg-info/top_level.txt
-sx/__init__.py
-sx/pisa3/__init__.py
-sx/pisa3/pisa.py
-sx/pisa3/pisa_context.py
-sx/pisa3/pisa_default.py
-sx/pisa3/pisa_document.py
-sx/pisa3/pisa_paragraph.py
-sx/pisa3/pisa_paragraph2.py
-sx/pisa3/pisa_parser.py
-sx/pisa3/pisa_pdf.py
-sx/pisa3/pisa_reportlab.py
-sx/pisa3/pisa_tables.py
-sx/pisa3/pisa_tags.py
-sx/pisa3/pisa_turbogears.py
-sx/pisa3/pisa_util.py
-sx/pisa3/pisa_version.py
-sx/pisa3/pisa_wsgi.py
-sx/pisa3/reportlab_paragraph.py
-sx/w3c/__init__.py
-sx/w3c/css.py
-sx/w3c/cssDOMElementInterface.py
-sx/w3c/cssParser.py
-sx/w3c/cssSpecial.py
-test/cookbook.html
-test/cookbook.py
-test/datauri.py
-test/default.css
-test/helloworld.py
-test/linkloading.py
-test/pdf.css
-test/pdfform.html
-test/pdfjoiner.py
-test/simple-css.html
-test/simple-test.html
-test/simple.py
-test/story2canvas.py
-test/test-align.html
-test/test-all.html
-test/test-background-img.html
-test/test-background.html
-test/test-barcode.html
-test/test-bidirectional-text.html
-test/test-blocks.html
-test/test-cdata.html
-test/test-cdata.xml
-test/test-collapse.html
-test/test-css-body.html
-test/test-css-border.html
-test/test-css-fontface.html
-test/test-css-id.html
-test/test-css-media-1.css
-test/test-css-media-2.css
-test/test-css-media-4.css
-test/test-css-media.html
-test/test-css.html
-test/test-entities.html
-test/test-error.html
-test/test-font-img-error.html
-test/test-font.html
-test/test-helloworld.html
-test/test-image-align.html
-test/test-image.html
-test/test-invoice.html
-test/test-keep-with-next.html
-test/test-linespacing.html
-test/test-link.html
-test/test-list.html
-test/test-loremipsum.html
-test/test-margins.html
-test/test-page-box.html
-test/test-para-border.html
-test/test-pisa-linkfont.html
-test/test-pisa-toc-entities.html
-test/test-pisa-toc.html
-test/test-pre.html
-test/test-syntax.html
-test/test-tables.html
-test/test-template.html
-test/test-unicode-all.html
-test/test-unicode-greek.html
-test/test-unicode-japanese.html
-test/test-unicode-thaana.html
-test/test-w3c-css.html
-test/unicode.css
-test/visualdiff.py
-test/witherror.py
-test/x.txt
-test/css/content.css
-test/css/reset.css
-test/css/test-css-media-3.css
-test/font/README.txt
-test/img/beach.jpg
-test/img/denker.png
-test/img/test.jpg
-test/pdf/background-sample.pdf
-test/pdf/test-invoice-bg.pdf
-test/test-all/01.jpg
-test/test-all/02.jpg
-tests/__init__.py
-tests/runtests.py
-tests/test_parser.py
-tests/test_samples.py
-tests/test_uri.py
-tests/samples/borders.html
-tests/samples/borders.pdf
-tests/samples/font-and-styles.html
-tests/samples/font-and-styles.pdf
-tests/samples/images.html
-tests/samples/images.pdf
-tests/samples/tables.html
-tests/samples/tables.pdf
-tests/samples/unicode.css
-tests/samples/utf8.html
-tests/samples/utf8.pdf
-tests/samples/font/CODE2000.TTF
-tests/samples/img/denker.png
-tests/samples/img/tree.jpg
-tests/tmp/right/borders.pdf
