@@ -1,4 +1,0 @@
-[console_scripts]
-pisa = sx.pisa3:command
-xhtml2pdf = sx.pisa3:command
-
