@@ -7,8 +7,10 @@
 ********************************************************************************
 
 Version 4.0.1b, 2022-06-24
-- UPD: 2to3 has been run over each Python script in the library to begin 
-       the process of updating to Python 3.
+- 2to3 has been run over each Python script in the library to begin the process
+  of updating to Python 3.
+- Removed ez_setup.py and setup.py. Python's package management has evolved 
+  substantially in the last 12 years.
 
 Version 3.0.33, 2010-06-16
 - NEW: Changed license to Apache License 2.0, now completely Open Source 
